c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/void/void_equality.c
void x(void);
int main(void) {
    // you can't compare void expressions
    return x() == (void)10;
}